# proof-please

./: .env.example  .gitignore  .npmrc  Anchor.toml  CLAUDE.md  README.md  STATUS.md  eslint.config.mjs  netlify.toml  next.config.mjs  package.json  paper please.docx  paper_please_004.docx  pnpm-lock.yaml  tsconfig.json  tsconfig.test.json
app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/api/score/: route.ts
app/dashboard/: page.tsx
app/pool/: page.tsx
app/projects/: page.tsx
app/submit/: page.tsx
components/: connect-wallet-button.tsx  contribution-card.tsx  fund-escrow-modal.tsx  live-feed.tsx  nav.tsx  project-card.tsx  register-project-modal.tsx  rep-balance.tsx  score-ring.tsx  submit-slideover.tsx  truncate-key.tsx  wallet-error-banner.tsx  wallet-gate.tsx
lib/: explorer.ts  use-wallet-pubkey.ts
lib/idl/: indie_pool.json  indie_pool.ts
lib/indie-pool/: client.ts  projects.ts  store.ts  types.ts
programs/indie-pool/: Cargo.toml
programs/indie-pool/src/: lib.rs
scripts/: seed-projects.ts
tests/: indie-pool.ts
