[package]
name = "indie-pool"
version = "0.1.0"
description = "Indie Pool: decentralized contribution & reputation infrastructure for indie game ecosystems."
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "indie_pool"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32", features = ["init-if-needed"] }
anchor-spl = { version = "0.32", features = ["token_2022", "associated_token"] }
